--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,6 +2,7 @@ version: "3.7"
 services:
   es7:
     image: "elasticsearch:7.3.0"
+    user: root
     ports:
       - 9200:9200
       - 9300:9300
@@ -13,6 +14,7 @@ services:
       - rql-es7:/usr/share/elasticsearch/data
   cassandra:
     image: "cassandra:3.11.4"
+    user: root
     ports:
       - 7000:7000
     environment:
